--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,39 @@ color: green;
 	height: 300px;
 	background-color: blue;
 }
+
+*/
+*{
+	margin: 0;
+	padding: 0;
+}
+section{
+	width: 100%;/* px/%/vw*/
+	height: 100vh;/* px/%/vh*/
+    background-color: lightgreen;
+
+}
+section#header{
+	width: 100%;/* px/%/vw*/
+	height: 100vh;/* px/%/vh*/
+    background-color: lightgreen;
+    line-height: 100vh;
+    background-image: url('http://podrobnosti.ua/media/pictures/2016/10/31/thumbs/740x415/mezhdunarodnyj-den-chernogo-morja_rect_f6515d14a523fc02a2892a43034caaed.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; /* top,left,right,bottom*/
+}
+
+#header h1{
+
+font-size: 75px; /*px/em/rem/%/vh*/
+font-weight: normal; /*narmal/dold/semi-bold*/
+font-family: 'Arial', serif;
+font-variant: small-caps;/*small-caps*/
+font-style: italic; /*normal, monospace*/
+text-align: center; /* left/right/center/justify*/
+text-decoration: underline; /* overline/ underline/line-throw */
+text-transform: capitalize; /* uppercase/ lowercase/capitalize*/
+text-indent: 100px; /* px/tv/%/vw */
+}
+
